samples/_failures_safe/1761189659_f25c70_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_de4022d6.c: In function ‘tokenize’:
./samples/SAFE/__tmp_de4022d6.c:168:5: error: expected declaration or statement at end of input
  168 |     while (peek(lexer) != '\0') {
      |     ^~~~~
./samples/SAFE/__tmp_de4022d6.c:168:5: error: expected declaration or statement at end of input
